--- a/docs/css/style_home.css
+++ b/docs/css/style_home.css
@@ -6,6 +6,7 @@ body {
     font-size: 72px;
     text-decoration: underline;
     text-decoration-color: red;
+    text-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
 .top_menu {
     list-style: none;
