--- a/docs/css/style_books.css
+++ b/docs/css/style_books.css
@@ -1,8 +1,8 @@
-.touch p {
+.touch > p {
   font-size: 36px;
   color: #000;
 }
-.touch p:hover {
+.touch > p:hover {
   font-size: 144px;
   color: red;
   text-shadow: 0 0 .8px rgba(0, 0, 0, .8);
