--- a/docs/css/style_studio.css
+++ b/docs/css/style_studio.css
@@ -2,8 +2,9 @@ body {
     font-family: sans-serif;
   }
   h1, h2 {
-    font-weight: 400;
+    font-size: 64px;
     color: red;
+    text-align: center;
   }
   #studios > div {
     margin: 1em 0;
@@ -13,7 +14,6 @@ body {
   }
   .studio-title {
     font-weight: bold;
-    text-align: center;
   }
   .studio-title-en {
     margin-left: 1em;
