--- a/docs/css/style_studio.css
+++ b/docs/css/style_studio.css
@@ -1,1 +1,21 @@
-
+body {
+    background-color: #fff;
+    font-size: 24px;
+}
+#studios > div {
+    margin: 3em 0;
+    padding: 0.5em;
+    background: #f8f8f8;
+    min-height: 3em;
+    text-align: center;
+  }
+.studio-title {
+    padding-top: 2em;
+}
+img {
+    width: 400px;
+    height: 225px;
+    display: flex;
+    text-shadow: 0 0 .8px rgba(0, 0, 0, .8);
+    margin: 0 auto;
+}
